wrap components in memo to prevent re-renders

--- a/src/components/movie_modal/movie_modal.module.css
+++ b/src/components/movie_modal/movie_modal.module.css
@@ -110,7 +110,7 @@
   vertical-align: text-bottom;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   .inside {
     font-size: 12px;
     width: 570px;
